# vercel_rs_api

./: Cargo.toml  README.md
api/: handler.rs
src/: main.rs
