[package]
name = "vercel_rs_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features =["macros"]}
serde_json = {version = "1", features = ["raw_value"]}
vercel_runtime = {version = "0.2.1"}
